0.9.10
    - Documentation update
    - FIX: Duration nsec calculation from millis
    
0.9.9
    - Documentation update
    - Duration(-1) represents infinite Duration
    
0.9.8
    - Removed ReaderListener & WriterListener in favor of CommunicationListener.
    - DEADLINE QoS
    - DESTINATION_ORDER follows the same semantics as specified in DDS specification.
      I.e. determination is done at instance level, not at sample level
    - FIX: add INFO_DESTINATION to messages

0.9.6 - 0.9.7
    - skipped release

0.9.5
    - handle INFO_DESTINATION
    - Detect of restoration of liveliness. 
    - A Possibility to create custom TransportProviders. As a proof-of-concept,
      a new memory based TransportProvider is provided. This provider can be 
      used in configuration URIs with scheme 'mem'. 
    - Config: jrtps.discovery.announce-uris provides a list of URIs, that is used 
      to determine where to announce presence of participants.
    
0.9.4
    - Removed SampleKey. KeyHash is adequate to represent a key of samples and instances.
    - WriterLivelinessListener adds support for detecting loss of liveliness
      of writers.

0.9.3
    - FIX: primitive types are aligned on their natural boundaries.
    - First succesful interoperability test with OpenDDS. Both subscription
      and publication tests work with OpenDDS Messenger example.
    
0.9.2
    - FIX: Use parameter PID_BUILTIN_TOPIC_KEY(0x005a) during discovery
      instead of KeyHash(0x0070)
    - First successful interoperability tests with OpenSplice 6.3.
      Using Subscriber of examples.ospl.hello with slightly modified 
      version of Ospl hello example works ok. One need to write
      something like 10 samples before exiting (waiting 1 sec between
      samples), because ospl publisher exits before match making during 
      discovery is finished. 
     
0.9.1
    - Type annotation can be used to set the topic name and type name 
      reported to remote entities. 