@@ -40,9 +40,9 @@ class BuiltinPublicationDataListener extends BuiltinListener implements SampleLi
                     // associate
                     QualityOfService offered = pd.getQualityOfService();
                     QualityOfService requested = r.getRTPSReader().getQualityOfService();
-                    log.trace("Check for compatible QoS for {} and {}", pd.getBuiltinTopicKey().getEntityId(), 
+                    log.debug("Check for compatible QoS for {} and {}", pd.getBuiltinTopicKey().getEntityId(), 
                             r.getRTPSReader().getGuid().getEntityId());
-
+                    
                     if (offered.isCompatibleWith(requested)) {
                         r.addMatchedWriter(pd);
                     } else {
