@@ -37,3 +37,8 @@ Overview
   * Documentation update
   
   * FIX: gracefully close deadline monitors during participant close
+  
+  * FIX: Duration nsec calculation from millis
+  
+  * FIX: QoS compatibility check compares to default value, if given policy is 
+      not explicitly found from QoS policies.
